Added icon class to css
Added icon and mongooseIcon classes to css

--- a/css/styles.css
+++ b/css/styles.css
@@ -548,6 +548,16 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+
+.icon {
+  height: 15vh;
+  width: 8vw;
+}
+
+.mongooseIcon {
+  height: 14vh;
+  width: 9vw;
+}
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
