--- a/css/styles.css
+++ b/css/styles.css
@@ -10064,7 +10064,7 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("https://www.gammastack.com/wp-content/uploads/2019/12/How-to-Develop-an-Esports-Tournament-Website-Blog-930x450.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/mountain-biking.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
